fixed: z-index of upload_file accept dialog
the file_upload accept type dialog is now on top of the CKEditor image tool dialog
added a class to the dialog and set the hightest z-level important

--- a/web/css/widget/widget.styl
+++ b/web/css/widget/widget.styl
@@ -504,6 +504,10 @@ ol.ui-editable-items-list li.display_info::before
 		margin-top: -12px
 		cursor: pointer
 		
-.help {
-	cursor: help;
-}
+.help
+	cursor help
+	
+div.ui-dialog.file_upload_error
+	z-index 20000 !important
+	
+
